# Context-Hub

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  buf.gen.yaml  docker-compose.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  scale.yml
apps/web/: eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/web/e2e/: import-explore.spec.ts
apps/web/e2e/fixtures/: services.json
apps/web/public/demo/: mcp-ai.html
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: data-source-manager.tsx  function-tools.tsx  graph-explorer.tsx  graph-query-builder.test.ts  graph-query-builder.tsx  graphql-source-form.test.ts  graphql-source-form.tsx  import-history.tsx  mapping-panel.test.ts  mapping-panel.tsx  ontology-editor.test.tsx  ontology-editor.tsx  rest-source-form.test.ts  rest-source-form.tsx
apps/web/src/lib/: context-hub-client.test.ts  context-hub-client.ts  graph-data.ts  mapping-transforms.test.ts  mapping-transforms.ts  ontology-catalog.ts  ontology-document.test.ts  ontology-document.ts
crates/context-hub-api/: Cargo.toml  build.rs
crates/context-hub-api/src/: function_runtime.rs  graphql_connector.rs  lib.rs  main.rs  rest_connector.rs
crates/context-hub-domain/: Cargo.toml
crates/context-hub-domain/src/: lib.rs
crates/context-hub-mapping/: Cargo.toml
crates/context-hub-mapping/examples/: generate_parquet_sample.rs
crates/context-hub-mapping/src/: lib.rs
crates/context-hub-mcp/: Cargo.toml  build.rs
crates/context-hub-mcp/src/: main.rs
crates/context-hub-storage/: Cargo.toml
crates/context-hub-storage/src/: lib.rs
demo/: README.md  TOUR.md
demo/data/: nova-commerce.json
docs/: architecture.md  data-source-management.md  function-execution.md  graph-query-builder.md  graphql-connectors.md  import-history-provenance.md  mapping-plan.example.json  mapping-transformations.md  parquet-imports.md  rest-connectors.md  robust-imports.md
infra/clickhouse/: 001_graph.sql  002_ontology_data_mappings.sql  003_ingestion_ontology_scope.sql
proto/context_hub/v1/: context_hub.proto
scripts/: benchmark-graph.mjs  build-demo-tour-with-audio.sh  build-demo-tour.sh  check-target-budget.mjs  generate-demo-data.mjs  generate-large-sample.mjs  wait-for-http.mjs
