[workspace]
resolver = "2"
members = [
  "crates/context-hub-domain",
  "crates/context-hub-mapping",
  "crates/context-hub-storage",
  "crates/context-hub-api",
  "crates/context-hub-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.89"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.43", features = ["serde"] }
clickhouse = { version = "0.15", features = ["inserter", "rustls-tls-native-roots"] }
datafusion = { version = "53.0.0", default-features = false, features = ["nested_expressions", "parquet", "sql"] }
futures = "0.3.31"
object_store = { version = "0.13.2", features = ["aws", "fs", "http"] }
parquet = { version = "58.3.0", features = ["arrow"] }
prost = "0.14.3"
prost-types = "0.14.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "stream"] }
ring = "0.17.14"
schemars = { version = "1.2.1", features = ["chrono04", "uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tempfile = "3.23.0"
tokio = { version = "1.49.0", features = ["full"] }
tonic = { version = "0.14.2", features = ["tls-native-roots"] }
tonic-prost = "0.14.2"
tonic-web = "0.14.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["serde", "v4", "v5"] }
wasmi = "1.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

# Arrow/DataFusion debug symbols are several gigabytes and can exhaust local dev disks.
[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false
