[package]
name = "context-hub-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
clickhouse.workspace = true
context-hub-domain = { path = "../context-hub-domain" }
context-hub-storage = { path = "../context-hub-storage" }
prost.workspace = true
prost-types.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tonic-web.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.2"

[lints]
workspace = true
