[package]
name = "context-hub-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
prost.workspace = true
prost-types.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.2"

[lints]
workspace = true
