[package]
name = "context-hub-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clickhouse.workspace = true
context-hub-domain = { path = "../context-hub-domain" }
futures.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
